another fix for the horizontally aligned images

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,4 +90,24 @@ margin: 0px;
 	padding:40px;
 }
 
+#container {
+    width:100%;
+    text-align:center;
+}
+
+#left {
+    float:left;
+    width:100px;
+}
+
+#center {
+    display: inline-block;
+    margin:0 auto;
+    width:100px;
+}
+
+#right {
+    float:right;
+    width:100px;
+}
 
